updated to ToList()